# windenegy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  install.sh  plan.md  pyproject.toml  run_dev.sh  run_prod.sh
.github/workflows/: ci.yml  deploy.yml
artifacts/metrics/: gradient-boosting-T1-1h_test_outputs.csv  gradient-boosting-T1-24h_test_outputs.csv  gradient-boosting-T1-6h_test_outputs.csv  patchtst-T1-1h_test_outputs.csv  patchtst-T1-24h_test_outputs.csv  patchtst-T1-6h_test_outputs.csv  persistence-T1-1h_test_outputs.csv  persistence-T1-24h_test_outputs.csv  persistence-T1-6h_test_outputs.csv  power-curve-T1-1h_test_outputs.csv  power-curve-T1-24h_test_outputs.csv  power-curve-T1-6h_test_outputs.csv  rolling-mean-T1-1h_test_outputs.csv  rolling-mean-T1-24h_test_outputs.csv  rolling-mean-T1-6h_test_outputs.csv
configs/: default.yaml
docs/: ARCHITECTURE.md  DATA_CARD.md  MODEL_CARD.md
scripts/: download_scada.py  generate_calibration_report.py  run_data_pipeline.py  run_dev.py  train_all.py  train_baselines.py  train_gradient_boosting.py  train_patchtst.py
src/windenegy/application/: baseline.py  calibration_report.py  comparison.py  evaluation.py  features.py  forecasting.py  ingestion.py  risk.py  sequence_data.py  training.py  uncertainty.py  weather.py
src/windenegy/domain/: models.py  repository.py  sequence.py
src/windenegy/infrastructure/: config.py  logger.py  patchtst_model.py  persistence.py  weather_provider.py
src/windenegy/interface/: api.py  cli.py  dashboard.py
tests/fixtures/: sample_scada.csv
tests/integration/: test_api.py  test_training_pipeline.py
tests/unit/: test_evaluation.py  test_features.py  test_forecasting.py  test_models.py  test_persistence.py
